force-app/main/default/objects/Registration_Education__c/Registration_Education__c.object-meta.xml
<CustomObject>
    <description>Used in Registration Forms.</description>
    <label>Registration Education</label>
    <nameField>
        <displayFormat>RE-{00000000}</displayFormat>
        <label>Education Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>