force-app/main/default/objects/Registration_Education__c/fields/Applicant_Populated__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Populated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated via process builder.</description>
    <label>Applicant Populated?</label>
    <type>Checkbox</type>
</CustomField>