force-app/main/default/objects/Registration_Education__c/fields/Attendee_Email__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Email__c</fullName>
    <description>Used for Attendee who will be taking a Garment Exam</description>
    <label>Attendee Email</label>
    <type>Email</type>
</CustomField>