force-app/main/default/objects/Registration_Education__c/fields/Conga_Link__c.field-meta.xml
<CustomField>
    <fullName>Conga_Link__c</fullName>
    <formula>HYPERLINK("https://composer.congamerge.com/?SessionId=" + $Api.Session_ID +
"&amp;ServerURL=" +  $Api.Partner_Server_URL_290 +
 Send_Exam_Authorization__c ,
"Test Conga Workflow via UI")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Link</label>
    <type>Text</type>
</CustomField>