force-app/main/default/objects/Registration_Education__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <defaultValue>"Garment Registration Exam"</defaultValue>
    <description>Pick list Used in Garment and Farm</description>
    <inlineHelpText>Select one</inlineHelpText>
    <label>Course Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garment Registration Exam</fullName>
            </value>
            <value>
                <fullName>Farm Labor Contractor Exam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>