force-app/main/default/objects/Registration_Education__c/fields/Drawloop_Next_Exam_Auth__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_Exam_Auth__c</fullName>
    <formula>"SFRegistration_Education__c:" &amp; Id &amp; ";DDPId:a0Gt0000008T6rr;Deploy:a0Et0000009L6Sh;DeployType:autoemail"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawloop_Next_Exam_Auth</label>
    <type>Text</type>
</CustomField>