force-app/main/default/objects/Registration_Education__c/fields/Exam_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Exam_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked via workflow after the email is first sent to the applicant.</description>
    <label>Exam Notification Sent</label>
    <type>Checkbox</type>
</CustomField>