force-app/main/default/objects/Registration_Education__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <inlineHelpText>The date that this certification will expire.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>