force-app/main/default/objects/Registration_Education__c/fields/Is_Community_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_Community_Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Garment Registration for Exam section on VIP form tool</description>
    <label>Is Community Read Only</label>
    <type>Checkbox</type>
</CustomField>