force-app/main/default/objects/Registration_Education__c/fields/Number_of_Employees_Trained__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees_Trained__c</fullName>
    <description>Total Number of Employees Trained</description>
    <label>Number of Employees Trained</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>