force-app/main/default/objects/Registration_Education__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration</label>
    <referenceTo>License_Registration__c</referenceTo>
    <relationshipLabel>Registration Education</relationshipLabel>
    <relationshipName>Exam_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>