force-app/main/default/objects/Registration_Education__c/fields/Send_Exam_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Send_Exam_Authorization__c</fullName>
    <formula>"&amp;id=" + Id +
"&amp;templateid=a0nt000000028Pa" +
"&amp;EmailAdditionalTo=" + Registration__r.Applicant__r.Email +
"&amp;EmailRelatedToId=" + Registration__r.Id +
"&amp;EmailFromID=0D2t0000000Gmid" +
"&amp;congaemailtemplateid=a0lt0000000EWPF" +
"&amp;queryid=[Education]a0mt00000023Qs3?pv0=" + Registration__r.Id +
"&amp;defaultpdf=1" +
"&amp;qmode=SendEmail"</formula>
    <label>Send Exam Authorization</label>
    <type>Text</type>
</CustomField>