force-app/main/default/objects/Registration_Education__c/fields/Training_Year__c.field-meta.xml
<CustomField>
    <fullName>Training_Year__c</fullName>
    <description>Training Year</description>
    <inlineHelpText>Enter Year</inlineHelpText>
    <label>Training Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>