force-app/main/default/objects/Registration_Education__c/validationRules/Community_User_Cannot_Change_Exam_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Community_User_Cannot_Change_Exam_Name</fullName>
    <active>true</active>
    <description>Community User cannot change Education Name field.</description>
    <errorConditionFormula>AND( 
ISPICKVAL($Profile.UserType, 'CspLitePortal'), 
NOW() &gt; CreatedDate + 0.0001, 
ISCHANGED( Name ) 
)</errorConditionFormula>
    <errorMessage>Cannot change exam name. Please cancel and edit again to add Attendee, Language, and Date, if known.</errorMessage>
</ValidationRule>