force-app/main/default/objects/Registration_Education__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Registration__c</columns>
    <columns>Applicant__c</columns>
    <columns>Applicant_Populated__c</columns>
    <columns>Exam_Notification_Sent__c</columns>
    <columns>Send_Exam_Authorization__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>